Fixed navbar misalignment and broken functionality. Added js script file

--- a/src/style.css
+++ b/src/style.css
@@ -253,6 +253,10 @@ a:hover {
 /*Mobile Screen */
 
 @media (max-width: 768px) {
+  .navbar {
+    display: flex;
+  }
+
   h1 {
     font-size: 40px;
   }
